WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47548
[Qt] editing/input/emacs-ctrl-o.html
https://bugs.webkit.org/show_bug.cgi?id=47548
Summary
[Qt] editing/input/emacs-ctrl-o.html
Robert Hogan
Reported
2010-10-12 11:47:01 PDT
Qt is missing a couple of editing delegate messages from the Mac expected results: EDITING DELEGATE: shouldChangeSelectedDOMRange:range from 0 of DIV > DIV > BODY > HTML > #document to 0 of DIV > DIV > BODY > HTML > #document toDOMRange:range from 9 of #text > DIV > DIV > BODY > HTML > #document to 9 of #text > DIV > DIV > BODY > HTML > #document affinity:NSSelectionAffinityDownstream stillSelecting:FALSE EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification Qt is missing these because ctrl-o is bound to a sequence of commands on Mac, namely: insertParagraphSeparator then moveUp. In the DRT, we just interepret ctrl-o in EventSenderQt as '\n', i.e. insertParagraphSeparator. As a result we only issue one command, so don't generate the change in caret position that results in the above editing delegate messages. Since we are only passing an insertParagraphSeparator to mimic other DRTs and Qt clients are free to re-implement whatever key binding they like to perform whatever editing actions they like there is no point in bending over backwards to get DRT, or even EditorClientQt to mimic Mac here by repositioning the caret. So just add our own expected results and unskip.
Attachments
Patch
(3.75 KB, patch)
2010-10-12 12:38 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2010-10-12 12:38:22 PDT
Created
attachment 70556
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-12 13:46:28 PDT
Comment on
attachment 70556
[details]
Patch Clearing flags on attachment: 70556 Committed
r69597
: <
http://trac.webkit.org/changeset/69597
>
WebKit Commit Bot
Comment 3
2010-10-12 13:46:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug